<resources>
    <string name="app_name">ReSub</string>

    <!-- MAIN -->
    <string name="main_this_month_cost">이 달의 구독 결제 금액</string>
    <string name="main_won">0 원</string>

    <!-- Detail -->
    <string name="detail_name_foo">Netflix</string>
    <string name="detail_free_foo">무료체험 유/무 (기간)</string>
    <string name="detail_discount_foo">무료체험 유/무 (기간)</string>
    <string name="detail_multi_foo">다중 디바이스 지원 유/무 (대수)</string>
    <string name="detail_btn_add">나의 구독에 추가</string>
    <string name="detail_plan_name">플랜 이름</string>
    <string name="detail_plan_benefit_foo">혜택 주저리 주저리</string>
    <string name="detail_plan_charge_foo">18,000</string>
    <string name="detail_plan_slash">" / "</string>
    <string name="detail_plan_unit_foo">1 month</string>

    <!-- Register -->
    <string name="register_name_foo">Netflix</string>
    <string name="register_category_foo">동영상 스트리밍 / VOD</string>
    <string name="register_warn">* 실제 구독 어플리케이션에서 제공하는 요금제와 차이가 있을 수 있습니다. 이에대해 더 정확한 정보는 해당 어플리케이션의 요금 정책을 참고하시기 바랍니다. 빠르고 정확한 정보 제공을 위해 노력하겠습니다. 감사합니다.</string>


</resources>