<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/item_plan_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/basic_margin_element_half"
    app:cardCornerRadius="8dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/basic_margin_element">
        <TextView
            android:id="@+id/item_plan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_plan_name"
            style="@style/TextAppearance.AppCompat.Bold"
            android:textSize="12sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/basic_margin_element_half">
            <TextView
                android:id="@+id/item_plan_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_plan_charge_foo"
                style="@style/TextAppearance.AppCompat.Bold"
                android:gravity="end"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_plan_slash"
                style="@style/TextAppearance.AppCompat.Normal"
                android:gravity="end"
                android:textSize="10sp"/>

            <TextView
                android:id="@+id/item_plan_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_plan_unit_foo"
                style="@style/TextAppearance.AppCompat.Normal"
                android:gravity="end"
                android:textSize="10sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>