<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity"
    android:orientation="vertical">

    <!-- HEAD 시작 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_margin_basic">
        <!-- LOGO 시작 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TextAppearance.AppCompat.Bold"/>
        <!-- LOGO 끝 -->
        <!-- SIDE MENU 시작-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="@dimen/icon_size_menu"
                android:layout_height="@dimen/icon_size_menu"
                android:src="@mipmap/ic_menu"
                android:layout_gravity="end"/>
        </LinearLayout>
        <!-- SIDE MENU 끝-->
    </LinearLayout>
    <!-- HEAD 끝 -->
    <!-- MAIN 시작 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_this_month_cost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.206"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/this_month_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_won"
            style="@style/TextAppearance.AppCompat.Bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.121" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- MAIN 끝 -->

</LinearLayout>