<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.register.RegisterActivity"
    android:orientation="vertical">

    <!-- HEAD 시작 -->
    <LinearLayout
        android:id="@+id/register_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/basic_margin_title">
        <!-- LOGO 시작 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TextAppearance.AppCompat.Bold"
            android:textSize="27sp"/>
        <!-- LOGO 끝 -->
        <!-- SIDE MENU 시작-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="@dimen/icon_size_menu"
                android:layout_height="@dimen/icon_size_menu"
                android:src="@mipmap/ic_menu"
                android:layout_gravity="end"/>
        </LinearLayout>
        <!-- SIDE MENU 끝-->
    </LinearLayout>
    <!-- HEAD 끝 -->

    <!-- BODY1 시작 -->
    <LinearLayout
        android:id="@+id/register_body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/register_head">
        <ImageView
            android:id="@+id/detail_app_icon"
            android:layout_width="@dimen/icon_size_app"
            android:layout_height="@dimen/icon_size_app"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/basic_margin_title"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/basic_margin_element">
            <TextView
                android:id="@+id/register_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_name_foo"
                style="@style/TextAppearance.AppCompat.Bold"/>
            <TextView
                android:id="@+id/register_app_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_category_foo"
                style="@style/TextAppearance.AppCompat.Normal"/>
        </LinearLayout>
    </LinearLayout>
    <!-- BODY1 끝 -->

    <!-- BODY2 시작 -->
    <LinearLayout
        android:id="@+id/register_body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/register_body1"
        android:layout_marginTop="@dimen/basic_margin_element">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="SELECT A DATE"
                android:textColor="@color/grey"
                android:textSize="24sp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tvDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightGrey"
                android:textSize="20sp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="right">
                    <Button
                        android:id="@+id/btnLeft"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_arrow_left_24dp" />
                    <Button
                        android:id="@+id/btnRight"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_arrow_right_24dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
            android:id="@+id/main_single_row_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:deselection="false"
            app:longPress="false"
            app:multiSelection="false" />
    </LinearLayout>
    <!-- BODY2 끝 -->

</RelativeLayout>